# ChangeLog for sys-kernel/git-sources
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-kernel/git-sources/ChangeLog,v 1.688 2009/12/12 01:37:16 mpagano Exp $

*git-sources-2.6.32-r8 (12 Dec 2009)

  12 Dec 2009; Michael Pagano <mpagano@gentoo.org>
  +git-sources-2.6.32-r8.ebuild:
  Version bump

*git-sources-2.6.32-r7 (11 Dec 2009)

  11 Dec 2009; Michael Pagano <mpagano@gentoo.org>
  +git-sources-2.6.32-r7.ebuild:
  Version bump

*git-sources-2.6.32-r6 (11 Dec 2009)

  11 Dec 2009; Michael Pagano <mpagano@gentoo.org>
  -git-sources-2.6.32_rc8-r3.ebuild, -git-sources-2.6.32_rc8-r4.ebuild,
  -git-sources-2.6.32_rc8-r5.ebuild, +git-sources-2.6.32-r5.ebuild,
  +git-sources-2.6.32-r6.ebuild:
  Version bump and old version cleanup

*git-sources-2.6.32-r5 (10 Dec 2009)

  10 Dec 2009; Michael Pagano <mpagano@gentoo.org>
  +git-sources-2.6.32-r5.ebuild:
  Version bump

*git-sources-2.6.32-r4 (10 Dec 2009)

  10 Dec 2009; Michael Pagano <mpagano@gentoo.org>
  +git-sources-2.6.32-r4.ebuild:
  Version bump

*git-sources-2.6.32-r3 (09 Dec 2009)

  09 Dec 2009; Michael Pagano <mpagano@gentoo.org>
  +git-sources-2.6.32-r3.ebuild:
  Version bump

*git-sources-2.6.32-r2 (09 Dec 2009)

  09 Dec 2009; Michael Pagano <mpagano@gentoo.org>
  +git-sources-2.6.32-r2.ebuild:
  Version bump

  07 Dec 2009; Michael Pagano <mpagano@gentoo.org>
  -git-sources-2.6.32_rc8-r2.ebuild:
  Old version clean. Working on signing commits

  07 Dec 2009; Mike Pagano <mpagano@gentoo.org>
  -git-sources-2.6.32_rc8-r1.ebuild:
  Old version cleanup

*git-sources-2.6.32-r1 (06 Dec 2009)

  06 Dec 2009; Michael Pagano <mpagano@gentoo.org>
  +git-sources-2.6.32-r1.ebuild:
  Version bump

*git-sources-2.6.32_rc8-r5 (03 Dec 2009)

  03 Dec 2009; Michael Pagano <mpagano@gentoo.org>
  +git-sources-2.6.32_rc8-r5.ebuild:
  Version bump

*git-sources-2.6.32_rc8-r4 (02 Dec 2009)

  02 Dec 2009; Michael Pagano <mpagano@gentoo.org>