@@ -10,6 +10,7 @@ DIST patch-2.6.32-git5.bz2 4967106 RMD160 daa4ef09810bc6daa92a510e9000018495c158
 DIST patch-2.6.32-git6.bz2 4997699 RMD160 d98ff97b838f562d0899bce44a01ca27575eacae SHA1 af32775e2ec4ee6d996fc925c769f3c7f4b83cca SHA256 e630ea8fc16ef597474d07681300e97c362060d602f61c730f6335ad24488031
 DIST patch-2.6.32-git7.bz2 5268465 RMD160 5000265420a705207741fc6fad36aac0b32ed446 SHA1 19473c9c2e4f1187e9b1f1e5a9ac3bf8e5891588 SHA256 5cd541206c4f88b93f31d4fddb77faebb6ac56a1c8608d87a273b80cb06da540
 DIST patch-2.6.32-git8.bz2 5520179 RMD160 a77f6618af0f0955249a3b05b7c9161835347218 SHA1 473ba19d967f99093ed9ad13cd755f731dc3b636 SHA256 48de091c99f7caa284685d7bb88435b2435da4661c4869d985c3cc1b47c47654
+DIST patch-2.6.32-git9.bz2 7924885 RMD160 af7d22a25fb2ac8eab19bcb123a6032cdf626d97 SHA1 8f2f8f0ed09d98aed5e240eaceff4dbf38cf9fe5 SHA256 8db11ccb40f90a0c230caade66b726bec75c68564febf758114f3a9d188ef802
 EBUILD git-sources-2.6.32-r1.ebuild 1242 RMD160 875c70d1a229643c283a594983027fd8b707d112 SHA1 969fe37a96c8667bde745e84c4ac1e7baaad32fb SHA256 b9aa6225bdb22349272536178020e535b177862e6051f81b71f5d8255026b4a7
 EBUILD git-sources-2.6.32-r2.ebuild 1242 RMD160 7443a19a1cae9343e463d720890e6a6c93e0d99e SHA1 1275fd95f711ae4564f70ac82ccf94aa25635943 SHA256 7569e62e672b2bea720e38180c24243acbfba7f5a35d2127b94400b760f6924d
 EBUILD git-sources-2.6.32-r3.ebuild 1242 RMD160 5ed98bd203cd3ad54a60a195bc52c2d5849e0588 SHA1 d400c2f0943862aa1c88a7ec2b9cf02821909645 SHA256 c7d421e4ae791a9e3f1570f8f8adf9fa146c03648b23e59f002f02bfa3f953dd
@@ -18,12 +19,13 @@ EBUILD git-sources-2.6.32-r5.ebuild 1242 RMD160 b9edd9973fcae39c46b8ef7ec493ad87
 EBUILD git-sources-2.6.32-r6.ebuild 1242 RMD160 e993ffcce0d780cfb531c26401436ffdccb318af SHA1 d82c759e721047c6cd9948c5c664f0a605af48d3 SHA256 44497c253f8a93eb5487dc96d409fb8699113e2c0528ef4b5901748baa824e81
 EBUILD git-sources-2.6.32-r7.ebuild 1242 RMD160 40b0836187778e34834fb299abdee65021d569f7 SHA1 0b192d40fa9c0ad0417fd97222731884ea622fe8 SHA256 d5a078330e3de86132e643532b24003034e134ad7a4101149a7e8dc1e0752334
 EBUILD git-sources-2.6.32-r8.ebuild 1242 RMD160 652ec21d6ee8eaaf05c52e06da16a8dac052fd2e SHA1 ea6721d888631255e8a499457cbd8c7235db4337 SHA256 21ffb36cc67c466081cb70929be7eb832a6d59279250c7eeee1a0a80443488f7
-MISC ChangeLog 131066 RMD160 8e3c2caa51fc2189b169ed7b3fcf0771c2329ab0 SHA1 cc327122ed5ee9c56feade6e8056a63bef0967ed SHA256 f438739ba0f11b963883e9f2008dc627d7ebe24a32da17cb8fa338818de556d3
+EBUILD git-sources-2.6.32-r9.ebuild 1242 RMD160 9b50c00ce67605d1570510891295853a4206453c SHA1 40a3de94e67f82d948f398bfdb35b0a52904041c SHA256 51c658d1e11caccbf62b2b974e8c13245d30a30a3311a23180b0c33f3ba4c192
+MISC ChangeLog 131201 RMD160 6291e37a900fb99316d739995761d71d67309fb7 SHA1 631c86c46bc441ffd8ebd1104f1f14fda5cc7ba8 SHA256 4de325a4310525affaf550bb734fdb71f56dceb95f3d26c162c2808f3c115a6d
 MISC metadata.xml 443 RMD160 2b491a6310ff59f0658f64be1328b983ac82a462 SHA1 a65b3e97b9088758114ce0dbb46abb15879211e0 SHA256 9232689e2d3a60e31b4b0194770e6395613a110b77bef2f4e2f98d919acbaf13
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.11 (GNU/Linux)
 
-iEYEARECAAYFAksi898ACgkQPDPGULV25ONJ0gCeNarxtR5WTIOUdh3zv80nBkvH
-7SMAnROs1QD2csnPIlWgej9uTRnOsVew
-=80Es
+iEYEARECAAYFAksjrY8ACgkQPDPGULV25ON3VQCgylfjrbEgIfbADqwPjwvnqr0L
+vbkAoMxqMwQIPi8Jm4MX3MN3MCDF0dCU
+=/Qk6
 -----END PGP SIGNATURE-----
