@@ -1,6 +1,12 @@
 # ChangeLog for sys-kernel/git-sources
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-kernel/git-sources/ChangeLog,v 1.688 2009/12/12 01:37:16 mpagano Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-kernel/git-sources/ChangeLog,v 1.689 2009/12/12 14:49:44 mpagano Exp $
+
+*git-sources-2.6.32-r9 (12 Dec 2009)
+
+  12 Dec 2009; Mike Pagano <mpagano@gentoo.org>
+  +git-sources-2.6.32-r9.ebuild:
+  Version bump
 
 *git-sources-2.6.32-r8 (12 Dec 2009)
 
